Added datatype "rdf:XMLLiteral".

--- a/asset/css/rdf-datatype.css
+++ b/asset/css/rdf-datatype.css
@@ -8,6 +8,9 @@ input.xsd-integer {
     /* content: "\f13b"; */
     content: "\f121";
 }
+.o-icon-rdf-xml-literal:before {
+    content: "\f121";
+}
 .o-icon-xsd-boolean:before {
     content: "\f00c";
 }
