--- a/asset/css/rdf-datatype.css
+++ b/asset/css/rdf-datatype.css
@@ -1,6 +1,9 @@
 input.xsd-integer {
     width: 100%;
 }
+.o-icon-xsd-boolean:before {
+    content: "\f00c";
+}
 .o-icon-xsd-integer:before {
     content: "\f292";
 }
