Added datatype "xsd:date".

--- a/asset/css/rdf-datatype.css
+++ b/asset/css/rdf-datatype.css
@@ -5,6 +5,9 @@ input.xsd-integer {
 .o-icon-xsd-boolean:before {
     content: "\f00c";
 }
+.o-icon-xsd-date:before {
+    content: "\f073";
+}
 .o-icon-xsd-decimal:before {
     content: "\f3d1";
 }
